--- a/Travelover/sass/components/_button.scss
+++ b/Travelover/sass/components/_button.scss
@@ -62,7 +62,7 @@
 
     &_animated {
         animation:moveInBottom .5s ease-in-out .75s;
-        animation-fill-mode:backwards; /* 찾아보기 */
+        animation-fill-mode:backwards; 
     }
 }
 
