--- a/Travelover/sass/main.scss
+++ b/Travelover/sass/main.scss
@@ -15,10 +15,12 @@
 @import "components/composition";
 @import "components/feature_box";
 @import "components/form";
+@import "components/popup";
 @import "components/story";
 
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";
