--- a/Travelover/sass/abstracts/_variables.scss
+++ b/Travelover/sass/abstracts/_variables.scss
@@ -25,4 +25,5 @@ $default_font_size:1.6rem;
 // GRID
 $grid_width:114rem;
 $gutter_vertical:8rem;
+$gutter_vertical_small:6rem;
 $gutter_horizontal:6rem;
