--- a/Travelover/sass/layout/_header.scss
+++ b/Travelover/sass/layout/_header.scss
@@ -7,6 +7,11 @@
     -webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
+    @include respond(phone) {
+        -webkit-clip-path:polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path:polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
+
     .logo_box {
         position:absolute;
         top:4rem;
@@ -17,11 +22,8 @@
         }
     }
     .text_box {
-        /* text_box 가운데 정렬하기 위한 코드 */
-        position:absolute;
+        @include absCenter;
         top:45%;
-        left:50%;
-        transform:translate(-50%, -50%);
         text-align:center;
     }
 }
