--- a/Travelover/css/style.css
+++ b/Travelover/css/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800|Nanum+Myeongjo:400,700,800&subset=korean");
+/*
+    0 ~ 600px : 모바일
+    600 ~ 900px : 태블릿(세로)
+    900 ~ 1200px : 태블릿(가로)
+    1200 ~ 1800px : 일반
+    1800px + : 큰 화면
+
+    1em = 16px
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -34,10 +43,28 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  /*
+        width가 700일 때, tab_land와 tab_port 모두 해당되기 때문에
+        tab_port로 적용시키기 위해서 코드를 아래에 둠
+    */ }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
+
+::selection {
+  /* 마우스로 블럭 잡았을 때 */
+  background-color: #32e8b7;
+  color: #FFF; }
 
 body {
   font-family: 'Nanum Gothic', sans-serif;
@@ -57,12 +84,19 @@ body {
     font-size: 6rem;
     letter-spacing: 0.5rem;
     animation: moveInLeft 1s ease-in-out; }
+    @media only screen and (max-width: 37.5em) {
+      .heading_primary_main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .heading_primary_sub {
     font-family: 'Nanum Myeongjo', serif;
     display: block;
     font-size: 2rem;
     font-weight: 700;
     animation: moveInRight 1s ease-in-out; }
+    @media only screen and (max-width: 37.5em) {
+      .heading_primary_sub {
+        letter-spacing: .5rem; } }
 
 .heading_secondary {
   font-size: 3.5rem;
@@ -73,6 +107,12 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   transition: all .2s; }
+  @media only screen and (max-width: 56.25em) {
+    .heading_secondary {
+      font-size: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .heading_secondary {
+      font-size: 2.5rem; } }
   .heading_secondary:hover {
     transform: skewX(-15deg);
     /* skewY(20deg) scale(1.1) */
@@ -95,9 +135,15 @@ body {
 
 .u_margin_bottom_medium {
   margin-bottom: 4rem !important; }
+  @media only screen and (max-width: 56.25em) {
+    .u_margin_bottom_medium {
+      margin-bottom: 3rem !important; } }
 
 .u_margin_bottom_big {
   margin-bottom: 8rem !important; }
+  @media only screen and (max-width: 56.25em) {
+    .u_margin_bottom_big {
+      margin-bottom: 5rem !important; } }
 
 .u_margin_top_big {
   margin-top: 8rem !important; }
@@ -276,6 +322,34 @@ body {
     color: #FFF; }
   .card__price_value {
     font-size: 5rem; }
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+    .card {
+      height: auto;
+      background-color: #FFF;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+        .card__side__back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side__front {
+        transform: rotateY(0); }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card__cta {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0);
+        width: 100%;
+        padding: 7rem 4rem 4rem 4rem;
+        text-align: center; }
+      .card__price_box {
+        margin-bottom: 3rem; }
+      .card__price_value {
+        font-size: 4rem; } }
 
 .composition {
   position: relative; }
@@ -286,15 +360,35 @@ body {
     transition: all .3s;
     z-index: 10;
     outline-offset: 2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33333333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo__p1 {
       left: 0;
       top: -2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo__p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo__p2 {
       right: 0;
       top: 2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo__p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo__p3 {
       left: 20%;
       top: 10rem; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo__p3 {
+          left: 0;
+          top: 1rem;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1.5rem solid #32e8b7;
       transform: scale(1.05) translateY(-0.5rem);
@@ -311,6 +405,9 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
+  @media only screen and (max-width: 56.25em) {
+    .feature_box {
+      padding: 2rem; } }
   .feature_box:hover {
     transform: translateY(-1.5rem); }
   .feature_box__icon {
@@ -320,6 +417,9 @@ body {
     background-image: linear-gradient(to right, #aafeeb, #7e5bbf);
     -webkit-background-clip: text;
     color: transparent; }
+    @media only screen and (max-width: 56.25em) {
+      .feature_box__icon {
+        margin-bottom: 0; } }
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem; }
@@ -336,6 +436,9 @@ body {
   width: 90%;
   display: block;
   transition: all .3s; }
+  @media only screen and (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -361,6 +464,10 @@ body {
 .form__radio_group {
   width: 49%;
   display: inline-block; }
+  @media only screen and (max-width: 56.25em) {
+    .form__radio_group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form__radio_input {
   display: none; }
@@ -470,6 +577,14 @@ body {
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-15deg); }
+  @media only screen and (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem;
+      padding-left: 7rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .story {
+      transform: skewX(0); } }
   .story__shape {
     /*background-color:orangered;*/
     width: 13rem;
@@ -481,6 +596,9 @@ body {
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(15deg);
     position: relative; }
+    @media only screen and (max-width: 37.5em) {
+      .story__shape {
+        transform: translateX(-3rem) skewX(0); } }
   .story__img {
     height: 100%;
     transform: scale(1.1);
@@ -488,6 +606,9 @@ body {
     transition: all .5s; }
   .story__text {
     transform: skewX(15deg); }
+    @media only screen and (max-width: 37.5em) {
+      .story__text {
+        transform: skewX(0); } }
   .story__caption {
     position: absolute;
     top: 50%;
@@ -512,9 +633,15 @@ body {
   background-color: #333;
   padding: 10rem 0;
   font-size: 1.4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo_box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__logo_box {
+        margin-bottom: 6rem; } }
   .footer__logo {
     width: 7rem;
     height: auto; }
@@ -522,6 +649,10 @@ body {
     border-top: 1px solid #eee;
     padding-top: 2rem;
     display: inline-block; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -545,6 +676,10 @@ body {
     color: #f7f7f7;
     width: 75%;
     float: right; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        float: none; } }
     .footer__copyright .footer__link {
       text-transform: none; }
 
@@ -554,6 +689,13 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media only screen and (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row::after {
     content: "";
     display: table;
@@ -564,6 +706,13 @@ body {
     float: left; }
     .row [class^="col_"]:not(:last-child) {
       margin-right: 6rem; }
+      @media only screen and (max-width: 56.25em) {
+        .row [class^="col_"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .row [class^="col_"] {
+        width: 100% !important; } }
   .row .col_1_of_2 {
     width: calc((100% - 6rem) / 2); }
   .row .col_1_of_3 {
@@ -586,6 +735,10 @@ body {
   /* .logo_box, position 때문에 */
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header .logo_box {
     position: absolute;
     top: 4rem;
@@ -593,11 +746,11 @@ body {
     .header .logo_box .logo {
       height: 4.5rem; }
   .header .text_box {
-    /* text_box 가운데 정렬하기 위한 코드 */
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    top: 45%;
     text-align: center; }
 
 .navigation__checkbox {
@@ -615,6 +768,14 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .navigation__button {
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation__background {
   width: 6rem;
@@ -626,6 +787,14 @@ body {
   background-image: radial-gradient(#84d8fd, #7e5bbf);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .navigation__background {
+      top: 3.5rem;
+      right: 3.5rem; } }
 
 .navigation__nav {
   /*background-color:orangered;*/
@@ -718,6 +887,9 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media only screen and (max-width: 56.25em) {
+    .section_about {
+      padding: 20rem 0; } }
 
 .section_features {
   padding: 20rem 0;
@@ -727,27 +899,51 @@ body {
   margin-top: -10rem; }
   .section_features > * {
     transform: skewY(7deg); }
+  @media only screen and (max-width: 56.25em) {
+    .section_features {
+      padding: 10rem 0; } }
 
 .section_tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 10rem 0;
+  padding: 25rem 0 15rem 0;
+  /* padding:25rem 0 15rem 0; */
   margin-top: -10rem; }
+  @media only screen and (max-width: 56.25em) {
+    .section_tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section_stories {
   /* background-color:$color_gray_light_1; */
   position: relative;
   padding: 12rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .section_stories {
+      padding: 10rem 0; } }
 
 .section_book {
   padding: 12rem 0;
   background-image: linear-gradient(to right bottom, #84d8fd, #7e5bbf); }
+  @media only screen and (max-width: 56.25em) {
+    .section_book {
+      padding: 10rem 0; } }
 
 .book {
   /*background-image:linear-gradient(105deg, transparent 0%, transparent 50%, rgba($color_white, .5) 50%), url(../img/brooklyn_bridge_2.jpg);*/
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url(../img/brooklyn_bridge_2.JPG);
   background-size: cover;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  height: 50rem; }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  @media only screen and (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 65%, transparent 65%), url(../img/brooklyn_bridge_2.JPG); } }
+  @media only screen and (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 100%), url(../img/brooklyn_bridge_2.JPG); } }
   .book__form {
     width: 50%;
     padding: 4rem 6rem; }
+    @media only screen and (max-width: 75em) {
+      .book__form {
+        width: 65%; } }
+    @media only screen and (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
