--- a/Travelover/sass/base/_typography.scss
+++ b/Travelover/sass/base/_typography.scss
@@ -18,6 +18,12 @@ body {
         font-size:6rem;
         letter-spacing:0.5rem;
         animation:moveInLeft 1s ease-in-out;
+
+        @include respond(phone) { 
+            letter-spacing:1rem;
+            font-size:5rem;
+        }
+    
     }
 
     &_sub {
@@ -26,6 +32,10 @@ body {
         font-size:2rem;
         font-weight:700;
         animation:moveInRight 1s ease-in-out;
+
+        @include respond(phone) { 
+            letter-spacing:.5rem;
+        }
     }
 }
 
@@ -38,6 +48,14 @@ body {
     -webkit-background-clip:text;
     color:transparent;
     transition:all .2s;
+
+    @include respond(tab_port) {
+        font-size:3rem;
+    }
+
+    @include respond(phone) {
+        font-size:2.5rem;
+    }
 
     &:hover {
         transform:skewX(-15deg); /* skewY(20deg) scale(1.1) */
