--- a/Travelover/sass/components/_card.scss
+++ b/Travelover/sass/components/_card.scss
@@ -8,7 +8,7 @@
         height:52rem;
         transition:all .5s;
         transition:all .8s ease;
-        position: absolute;
+        position:absolute;
         top:0;
         left:0;
         width:100%;
@@ -118,5 +118,52 @@
 
     &__price_value {
         font-size:5rem;
+    }
+
+
+
+    // @include respond(tab_port) { 
+    @media only screen and (max-width:56.25em),
+           only screen and (hover:none) { // iPad와 같은 장치에서 hover할 수 없기 때문에 <-> hover:hover
+        height:auto;
+        background-color:$color_white;
+        box-shadow:0 1.5rem 4rem rgba($color_black, .15);
+
+        &__side {
+            height:auto;
+            position:relative;
+            box-shadow:none;
+            
+            &__back {
+                transform:rotateY(0);
+                clip-path:polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &__side__front{
+            transform:rotateY(0);
+        }
+
+        &__details { 
+            padding:1rem 3rem;
+        }
+
+        &__cta {
+            position:relative;
+            top:0;
+            left:0;
+            transform:translate(0);
+            width:100%;
+            padding:7rem 4rem 4rem 4rem;
+            text-align:center;
+        }
+
+        &__price_box {
+            margin-bottom:3rem;
+        }
+
+        &__price_value {
+            font-size:4rem;
+        }
     }
 }
