--- a/Travelover/sass/components/_composition.scss
+++ b/Travelover/sass/components/_composition.scss
@@ -8,17 +8,41 @@
         z-index:10;
         outline-offset:2rem;
 
+        @include respond(tab_port) { 
+            float:left;
+            position:relative;
+            width:33.33333333%;
+            box-shadow:0 1.5rem 3rem rgba($color_black, .2);
+        }
+
         &__p1{
             left:0;
             top:-2rem;
+
+            @include respond(tab_port) { 
+                top:0;
+                transform:scale(1.2);
+            }
         }
         &__p2{
             right:0;
             top:2rem;
+
+            @include respond(tab_port) { 
+                top:-1rem;
+                transform:scale(1.3);
+                z-index:100;
+            }
         }
         &__p3{
             left:20%;
             top:10rem;
+
+            @include respond(tab_port) { 
+                left:0;
+                top:1rem;
+                transform:scale(1.1);
+            }
         }
         &:hover {
             outline:1.5rem solid $color_mint_3;
