--- a/Travelover/sass/components/_feature_box.scss
+++ b/Travelover/sass/components/_feature_box.scss
@@ -7,6 +7,10 @@
     box-shadow:0 1.5rem 4rem rgba($color-black, .15);
     transition:transform .3s;
 
+    @include respond(tab_port) { 
+        padding:2rem;
+    }
+
     &:hover {
         transform:translateY(-1.5rem);
     }
@@ -18,5 +22,9 @@
         background-image:linear-gradient(to right, $color_mint_1, $color_purple_1);
         -webkit-background-clip:text;
         color:transparent;
+
+        @include respond(tab_port) { 
+            margin-bottom:0;
+        }
     }
 }
