--- a/Travelover/sass/components/_story.scss
+++ b/Travelover/sass/components/_story.scss
@@ -8,6 +8,16 @@
     font-size:$default_font_size;
     transform:skewX(-15deg);
 
+    @include respond(tab_port) { 
+        width:100%;
+        padding:4rem;
+        padding-left:7rem;
+    }
+
+    @include respond(phone) { 
+        transform:skewX(0);
+    }
+
     &__shape {
         /*background-color:orangered;*/
         width:13rem;
@@ -19,6 +29,10 @@
         clip-path:circle(50% at 50% 50%);
         transform:translateX(-3rem) skewX(15deg);
         position:relative;
+
+        @include respond(phone) { 
+            transform:translateX(-3rem) skewX(0);
+        }
     }
 
     &__img {
@@ -30,6 +44,10 @@
 
     &__text {
         transform:skewX(15deg);
+
+        @include respond(phone) { 
+            transform:skewX(0);
+        }
     }
 
     &__caption {
